# multi-agent-world-model

./: .gitignore  README.md  analyze_multi_styles.ipynb  eval_main.py  main.py  pyproject.toml  run_glm_3styles.sh  run_glm_a3styles.sh  run_kimi_3styles.sh
analysis/: analyze_new_eval.ipynb
core/: config.py  consolidate.py  data.py  data_fix.py  env.py  env_fix.py  env_generate.py  finalize.py  goal_fix.py  scenario.py  schema.py  spec.py  task.py  verifier.py  verifier_fix.py  verifier_gen.py  verifier_step.py
core/config/: gen_claude.yml  gen_claude_train.yml  gen_glm.yml  gen_kimi.yml
eval/: agent.py  config.py  data.py  multi_agent.py  platform.py  prompts.py  run.py  scorer.py  single_agent.py  tools.py
eval/config/: multi_diff.yml  multi_same.yml  single.yml
eval/config/multi_diff/: qwen35-122b__35b-sub.yml  qwen35-397b__35b-sub.yml
eval/config/multi_same/: glm47.yml  glm52.yml  kimi26.yml  qwen35-122b.yml  qwen35-27b.yml  qwen35-35b.yml  qwen35-397b.yml  qwen36-27b.yml  qwen36-35b.yml  wideseek.yml
eval/config/single/: bedrock_claude.yml  dsv4.yml  glm47.yml  glm52.yml  kimi26.yml  kimi26_500.yml  openai_gpt.yml  opus_4_8_thinking.yml  qwen35-122b.yml  (+8 more)
train/: awm_config.py  awm_config.yaml  config.yaml  config_debug27.yaml  config_debug35.yaml  config_train27.yaml  filters.py  inspect_rollout.py  reward.py  rollout.py  run_awm_debug27.sh  run_awm_debug35.sh  run_awm_qwen36_27b.sh  run_awm_train27.sh
train/smoke_test/: rollout_to_msg.py  test_rollout_l1.py
utils/: agent_io.py  fix_locks.py  llm.py  mcp.py  server.py  suggestions.py  task_utils.py
(+41 files in other folders)
