[project]
name = "multi-agent-world-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "boto3>=1.43.24",
    "fastapi>=0.136.3",
    "fastapi-mcp>=0.3.3",
    "loguru>=0.7.3",
    "mcp-agent>=0.2.6",
    "numpy>=2.4.6",
    "openai>=2.17.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.50",
    "tqdm>=4.67.3",
    "uvicorn>=0.49.0",
]
